--- a/25023190.ipynb
+++ b/25023190.ipynb
@@ -164,9 +164,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "52a899d1-e2a9-4905-a540-327e02dccf71",
+   "metadata": {},
+   "source": [
+    "Bài 5:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "67b28ad3-8c09-4216-b64c-950b0ea25b04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Even\n"
+     ]
+    }
+   ],
+   "source": [
+    "x= int(input())\n",
+    "if (x%2==0):\n",
+    "    print(f\"Even\")\n",
+    "else:\n",
+    "    print(f\"Odd\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a93d2a7-5685-450d-b020-45c03287eec9",
+   "id": "0e47008a-cc08-4426-b0cc-2da2409acb8d",
    "metadata": {},
    "outputs": [],
    "source": []
