--- a/25023190.ipynb
+++ b/25023190.ipynb
@@ -16,7 +16,7 @@
    "id": "b82b2e12-6aaa-41d2-bcde-8fcfedf0f058",
    "metadata": {},
    "source": [
-    "Bài 1:"
+    "### Bài 1:"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "id": "69a3bc68-c798-4099-af31-dcab3e8ad0c5",
    "metadata": {},
    "source": [
-    "Bài 2:"
+    "### Bài 2:"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "id": "28f7b709-73d8-4bd1-b960-27d2489b97c8",
    "metadata": {},
    "source": [
-    "Bài 3:"
+    "### Bài 3:"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "id": "cccf7ca6-6997-4ef4-ab0b-3d051594fa92",
    "metadata": {},
    "source": [
-    "Bài 4:"
+    "### Bài 4:"
    ]
   },
   {
@@ -168,7 +168,7 @@
    "id": "52a899d1-e2a9-4905-a540-327e02dccf71",
    "metadata": {},
    "source": [
-    "Bài 5:"
+    "### Bài 5:"
    ]
   },
   {
@@ -201,9 +201,127 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "df40e6cd-e00d-47f7-9598-6bad88d4108d",
+   "metadata": {},
+   "source": [
+    "### Bài 6:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d009f274-58a0-44c1-85a2-1837a94074f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " -1\n",
+      " -3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "b = int(input())\n",
+    "if (a<0) and (b<0):\n",
+    "    print(f\"Yes\")\n",
+    "else:\n",
+    "    print(f\"No\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bed7852-9031-4ce5-be8e-30cb49ddc11d",
+   "metadata": {},
+   "source": [
+    "### Bài 7:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "02c1ffef-65df-4b34-8edf-59ec68430916",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " âffdsf\n",
+      " afa\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "b = input()\n",
+    "if (len(a)>len(b)):\n",
+    "    print(f\"True\")\n",
+    "else:\n",
+    "    print(f\"False\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9082e9f6-828c-47bf-8ab5-6990f3e68788",
+   "metadata": {},
+   "source": [
+    "### Bài 8:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ca9b24de-fa6d-4105-8398-6245a88fb008",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1 1 0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NO\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b,c = map(int,input().split())\n",
+    "if (a>0) and (b>0) and (c>0):\n",
+    "            if (a+b>c) and (a+c>b) and (b+c>a):\n",
+    "                print(f\"YES\")\n",
+    "            else:\n",
+    "                print(f\"NO\")\n",
+    "else:\n",
+    "            print(f\"NO\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e47008a-cc08-4426-b0cc-2da2409acb8d",
+   "id": "4ea0e7a6-6047-4987-b534-a6c2015c4dd5",
    "metadata": {},
    "outputs": [],
    "source": []
