--- a/25023190.ipynb
+++ b/25023190.ipynb
@@ -16,7 +16,7 @@
    "id": "b82b2e12-6aaa-41d2-bcde-8fcfedf0f058",
    "metadata": {},
    "source": [
-    "### Bài 1:"
+    "### Bài 2:"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "id": "69a3bc68-c798-4099-af31-dcab3e8ad0c5",
    "metadata": {},
    "source": [
-    "### Bài 2:"
+    "### Bài 3:"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "id": "28f7b709-73d8-4bd1-b960-27d2489b97c8",
    "metadata": {},
    "source": [
-    "### Bài 3:"
+    "### Bài 4:"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "id": "cccf7ca6-6997-4ef4-ab0b-3d051594fa92",
    "metadata": {},
    "source": [
-    "### Bài 4:"
+    "### Bài 5:"
    ]
   },
   {
@@ -168,7 +168,7 @@
    "id": "52a899d1-e2a9-4905-a540-327e02dccf71",
    "metadata": {},
    "source": [
-    "### Bài 5:"
+    "### Bài 6:"
    ]
   },
   {
@@ -205,7 +205,7 @@
    "id": "df40e6cd-e00d-47f7-9598-6bad88d4108d",
    "metadata": {},
    "source": [
-    "### Bài 6:"
+    "### Bài 7:"
    ]
   },
   {
@@ -244,7 +244,7 @@
    "id": "6bed7852-9031-4ce5-be8e-30cb49ddc11d",
    "metadata": {},
    "source": [
-    "### Bài 7:"
+    "### Bài 8:"
    ]
   },
   {
@@ -283,7 +283,7 @@
    "id": "9082e9f6-828c-47bf-8ab5-6990f3e68788",
    "metadata": {},
    "source": [
-    "### Bài 8:"
+    "### Bài 9:"
    ]
   },
   {
@@ -319,12 +319,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6c53fc60-11ac-4e2a-b190-4e4e751904d1",
+   "metadata": {},
+   "source": [
+    "### Bài 10:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9a504a9a-ee3c-471b-b0e0-3487716a77b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " -1 -2 -3 -4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "số lớn nhất -1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b,c,d = map(int,input().split())\n",
+    "lon_nhat = max(a,b,c,d)\n",
+    "print(f\"số lớn nhất {lon_nhat}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a353daaa-a907-4ce7-a04e-5e4fa262eaf9",
+   "metadata": {},
+   "source": [
+    "### Bài 11:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "25ca9e88-31d0-4970-86b3-0e6c35f29ba3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1 2 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Không phải tam giác\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b,c = map(int,input().split())\n",
+    "if (a>0) and (b>0) and (c>0):\n",
+    "    if (a+b>c) and (a+c>b) and (b+c>a):\n",
+    "        if (a==b) and (b==c) and (c==a):\n",
+    "            print(f\"Tam giác đều\")\n",
+    "        elif (a==b) or (b==c) or (c==a):\n",
+    "            print(f\"Tam giác cân\")\n",
+    "        else: \n",
+    "            print(f\"Tam giác thường\")\n",
+    "    else: \n",
+    "        print(f\"Không phải tam giác\")\n",
+    "else:\n",
+    "    print(f\"không phải tam giác\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0267c560-54cc-4ce9-bc1a-8a9014f89d3d",
+   "metadata": {},
+   "source": [
+    "### Bài 12:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ea0e7a6-6047-4987-b534-a6c2015c4dd5",
+   "id": "c900f60e-ba50-48b9-90be-2ce81504598e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "yr = int(input(\"Nhập vào năm\"))\n",
+    "if (yr>0):\n",
+    "    dv = yr%400\n",
+    "    if (yr%400==0) or (yr%4==0 and (yr%100 !=0)):\n",
+    "        print(f\"Yes\")\n",
+    "    else:\n",
+    "        print(f\"No\")"
+   ]
   }
  ],
  "metadata": {
