--- a/25023190.ipynb
+++ b/25023190.ipynb
@@ -408,19 +408,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c900f60e-ba50-48b9-90be-2ce81504598e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Nhập vào năm 2024\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n"
+     ]
+    }
+   ],
    "source": [
     "yr = int(input(\"Nhập vào năm\"))\n",
     "if (yr>0):\n",
     "    dv = yr%400\n",
-    "    if (yr%400==0) or (yr%4==0 and (yr%100 !=0)):\n",
+    "    if (yr%400==0) or (yr%4==0 and yr%100 !=0):\n",
     "        print(f\"Yes\")\n",
     "    else:\n",
     "        print(f\"No\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa52f45a-ff68-47a4-8944-1e97f98d4f11",
+   "metadata": {},
+   "source": [
+    "### Bài 14:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b30326db-ce6d-4f7d-b84f-66285454f48c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Nhập a,b 3 10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.33\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b = map(int,input(\"Nhập a,b\").split())\n",
+    "if (a==0):\n",
+    "    if b==0:\n",
+    "        print(f\"Vô số nghiệm\")\n",
+    "    else:\n",
+    "        print(f\"Vô nghiệm\")\n",
+    "else:\n",
+    "    print(f\"{round(b/a,2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3aad5fd1-5b0e-45d1-8f42-762b96a4489b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "nhập điểm 8.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "giỏi\n"
+     ]
+    }
+   ],
+   "source": [
+    "mark = float(input(\"nhập điểm\"))\n",
+    "if (mark<10) and (mark>=0):\n",
+    "    if mark>=8.0:\n",
+    "        print(f\"giỏi\")\n",
+    "    elif mark >=6.5:\n",
+    "        print(f\"khá\")\n",
+    "    elif mark >=5.0:\n",
+    "        print(f\"trung bình\")\n",
+    "    else:\n",
+    "        print(f\"yếu\")\n",
+    "else:\n",
+    "    print(f\"error\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3e9230e-083b-4a0c-9228-34c8869fa1df",
+   "metadata": {},
+   "source": [
+    "### Bài 16:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b4612a66-634e-415d-ad22-3db3448f1fe2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "nhập số: -1.5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2\n",
+      "-1\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = float(input(\"nhập số:\"))\n",
+    "if a>=0:\n",
+    "    down = int(a)\n",
+    "else: \n",
+    "    down = int(a) - (a != int(a))\n",
+    "if a>=0:\n",
+    "    up = int(a) + (a != int(a))\n",
+    "else:\n",
+    "    up = int(a)\n",
+    "phan_thap_phan = a -int(a)\n",
+    "if a>=0:\n",
+    "    roun = int(a) + (phan_thap_phan>=0.5)\n",
+    "else:\n",
+    "    roun = int(a) - (phan_thap_phan<=0.5)\n",
+    "print(down)\n",
+    "print(up)\n",
+    "print(roun)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbb189f4-73a3-40e5-8e60-fd51b9eac356",
+   "metadata": {},
+   "source": [
+    "### Bài 17:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5af5b18a-0bdc-4954-a946-2008413a6249",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 2 4 8 16\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cấp số nhân\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b,c,d = map(int,input().split())\n",
+    "if b%a==0:\n",
+    "    cb= b//a\n",
+    "    if (b*cb==c) and (c*cb==d):\n",
+    "        print(f\"cấp số nhân\")\n",
+    "    else: \n",
+    "        print(f\"không là cấp số nhân\")\n",
+    "else:\n",
+    "    print(f\"không là cấp số nhân\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47e29f45-af1b-4236-bec8-7327dcf2f842",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
